--- a/src/components/phase/PhaseApp.css
+++ b/src/components/phase/PhaseApp.css
@@ -1,15 +1,9 @@
 .App {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 .AppDiv {
-    position: relative;
-    overflow: hidden;
-    padding-top: 56.25%;
-    margin-top: 10px;
+  height: 600px;
 }
