feat: support tools in sidebar
closes #174

--- a/src/components/space/SpaceDescription.css
+++ b/src/components/space/SpaceDescription.css
@@ -1,5 +1,5 @@
 .SpaceDescription {
-  height: 100%;
+  height: calc(100% - 64px);
   display: flex;
   justify-content: center;
   align-items: center;
