--- a/src/components/phase/PhaseImage.css
+++ b/src/components/phase/PhaseImage.css
@@ -1,6 +1,6 @@
 .Image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 75%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
 }
